test/tests/stages/9_functions/invalid_declarations/redefine_var_as_fun.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(foo)
  =
  const int(1)
  ;
  int
  identifier(foo)
  (
  void
  )
  ;
  return
  identifier(foo)
  ;
  }
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(1)
  ;
  }
